# libklv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: libklvFunctions.cmake
examples/: CMakeLists.txt
libklv/: CMakeLists.txt
libklv/include/libklv/ber/: berencoder.h  beridentifier.h
libklv/include/libklv/common/: cowhelper.h  globals.h
libklv/src/ber/: beridentifier.cpp
